# wayland-rs

./: Cargo.toml
wayland-client/: Cargo.toml  build_pipeline.txt
wayland-client/client-core/: Cargo.toml
wayland-client/client-core/src/: connection.rs  proxy.rs
wayland-client/client-protocol-macro/: Cargo.toml
wayland-client/src/: event.rs  lib.rs
wayland-scanner/: Cargo.toml
wayland-scanner/src/: lib.rs
wayland-server/: Cargo.toml
wayland_client/: Cargo.toml
wayland_client/examples/: simple.rs
wayland_client/src/: event.rs  fixed.rs  lib.rs  proxy.rs
wayland_scanner/: Cargo.toml
wayland_scanner/scanner_macro/: Cargo.toml
wayland_scanner/scanner_macro/src/: client.rs  lib.rs  parser.rs  path.rs
wayland_scanner/src/: lib.rs  types.rs
wayland_server/: Cargo.toml
