[package]
name = "scanner_macro"
version = "0.1.0"
edition = "2024"

[dependencies]
change-case = "0.2.0"
proc-macro2 = "1.0.95"
quick-xml = { version = "0.37.5", features = ["serde", "serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
syn = { version = "2.0.101", features = ["parsing"] }

[lib]
proc-macro = true
